# vault

./: .envrc  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  cowork.yaml  justfile  rust-toolchain.toml  vault_intent.yaml
.cargo/: config.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: audit.yml  ci.yml  fuzz.yml  release.yml  scorecard.yml
crates/vault-agent/: Cargo.toml
crates/vault-agent/src/: approval.rs  audit.rs  handle.rs  inject.rs  lib.rs  protocol.rs  store.rs
crates/vault-agent/src/broker/: mod.rs  unix.rs
crates/vault-cli/: Cargo.toml
crates/vault-cli/src/: agent.rs  clipboard.rs  export.rs  main.rs  terminal.rs  unlock_secret.rs
crates/vault-cli/src/commands/: mod.rs
crates/vault-cli/tests/: agent_broker.rs  audit_commission.rs  cargo_vet.rs  cli.rs  constraint_index.rs  constraint_policy.rs  crypto_shred_rotation.rs  format_freeze.rs  gui_totp_in_app.rs  kdf_floor_policy.rs  live_hw_ffi.rs  marketing_hardware_audit.rs  mlock_install_docs.rs  padme_padding.rs  pq_posture.rs  ptrace_hardening.rs  recovery_codes.rs  streaming_payload_parse.rs  sync_provisioning.rs  threat_model_metadata.rs  v1_release.rs  yubikey_strict_default.rs
crates/vault-clip/: Cargo.toml
crates/vault-clip/src/: lib.rs
crates/vault-core/: Cargo.toml
crates/vault-core/src/: audit.rs  error.rs  gen.rs  import.rs  lib.rs  pad.rs  search.rs  totp.rs  vault.rs  wordlist.rs
crates/vault-core/src/crypto/: kdf.rs  mod.rs  stream.rs  tune.rs
crates/vault-core/src/envelope/: fido2.rs  mod.rs  tpm.rs
crates/vault-core/src/format/: block_stream.rs  cursor.rs  entry.rs  header.rs  inner_stream.rs  mod.rs  payload.rs  stanza.rs  tlv.rs  tlv_incremental.rs
crates/vault-core/src/memory/: mod.rs
crates/vault-core/src/rollback/: mod.rs
crates/vault-core/tests/: constraint_gaps.rs  format_freeze.rs  robustness.rs
crates/vault-gui/: Cargo.toml
crates/vault-gui/src/: clip.rs  gui_config.rs  keyfile_gui.rs  list_virtualize.rs  main.rs  search_cache.rs
crates/vault-gui/tests/: uc20_constraints.rs  uc21_constraints.rs  uc22_constraints.rs
crates/vault-hardware/: Cargo.toml
crates/vault-hardware/src/: fido2.rs  fido2_mock.rs  lib.rs  tpm.rs  tpm_mock.rs
crates/vault-hardware/tests/: constraint_hardware.rs
crates/vault-sys/: Cargo.toml
crates/vault-sys/src/: lib.rs
crates/vault-tui/: Cargo.toml
crates/vault-tui/src/: main.rs
docs/: AGENT_BROKER.md  ARCHITECTURE.md  AUDIT_COMMISSION.md  AUDIT_READINESS.md  CLI.md  CONSTRAINT_INDEX.md  CRATES_IO_TRUSTED_PUBLISHING.md  CRYPTO.md  ENTERPRISE_POSTURE.md  FILE_FORMAT.md  INSTALL.md  PRD.md  README.md  RELEASE.md  THIRD_PARTY_AUDIT.md  THREAT_MODEL.md  VERIFYING_RELEASES.md
docs/adr/: 0003-nonce-prefix-payload-key-salt.md  0004-data-key-keyed-hmacs.md  0005-format-v1-freeze.md  0006-agent-broker-scaffold.md  README.md
docs/guides/: deletion-and-rotation.md  enterprise-deployment.md  hardware-factor-status.md  post-quantum-posture.md  recovery-codes.md  size-padding-padme.md  sync-to-untrusted-storage.md
docs/specs/: README.md  UC-01-install-and-init.md  UC-02-csprng-generation.md  UC-03-store-secret.md  UC-04-model-blind-retrieval.md  UC-05-script-and-ci-output.md  UC-06-entry-management.md  UC-07-untrusted-storage-sync.md  UC-08-conflict-merge.md  UC-09-hardware-factors.md  UC-10-hostile-file-parsing.md  UC-11-kdf-calibration.md  UC-12-migration-import.md  UC-13-verifiable-releases.md  UC-14-runtime-hardening.md  UC-15-vulnerability-reporting.md  UC-16-agent-interface-future.md  UC-17-quick-capture-raw-import.md  UC-18-native-ui.md  UC-19-omni-search.md  UC-20-desktop-gui-hardening.md  UC-21-desktop-gaps-closure.md  UC-22-enterprise-readiness.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: block_stream.rs  header_parse.rs  payload_parse.rs  stanza_parse.rs
research/: agent_broker_research.md  cargo_vet_research.md  crypto_shred_rotation_research.md  format_freeze_research.md  gui_totp_in_app_research.md  kdf_floor_policy_research.md  live_hw_ffi_research.md  llm_offensive_threats.md  marketing_hardware_audit_research.md  metadata_leak_research.md  mlock_docker_research.md  padme_padding_research.md  pq_posture_research.md  ptrace_hardening_research.md  recovery_codes_research.md  security_coverage_gaps.md  streaming_payload_parse_research.md  sync_provisioning_research.md  third_party_audit_research.md  ui_architecture.md  v1_release_research.md  vault_spec.md  yubikey_strict_default_research.md
samples/: README.md  keys.txt
scripts/: audit-intake-checklist.sh  audit-readiness.sh  bundle-macos.sh  check-release-version.sh  check-unsafe-isolation.sh  dev-env.sh  install.sh  publish-crates.sh  reproducible-build.sh  setup-rust.sh
supply-chain/: config.toml
tests/: constraint_coverage.rs
