# Vault — Cargo workspace.
# The security core (`vault-core`) is a separate library from the CLI so it can be audited,
# fuzzed, and reused independently. Hardware factors live behind an optional crate.
[workspace]
resolver = "2"
members = [
    "crates/vault-core",
    "crates/vault-cli",
    "crates/vault-tui",
    "crates/vault-gui",
    "crates/vault-sys",
    "crates/vault-hardware",
    "crates/vault-clip",
    "crates/vault-agent",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
rust-version = "1.96"            # MSRV — keep in sync with rust-toolchain.toml (constraint C24).
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/leocelis/vault"
homepage = "https://github.com/leocelis/vault"
authors = ["The Vault maintainers"]
keywords = ["password-manager", "encryption", "security", "argon2", "vault"]
categories = ["command-line-utilities", "cryptography", "authentication"]

# Centralized, pinned dependency versions. Only audited crypto libraries (constraint C3).
[workspace.dependencies]
# --- Cryptography (audited libraries only — no custom primitives) ---
chacha20poly1305 = "0.10"       # C1  XChaCha20-Poly1305 / STREAM
chacha20         = "0.9"        # C19 inner-stream ChaCha20 over Protected fields
argon2           = "0.5"        # C2  Argon2id KDF
hkdf             = "0.12"       # C5  HKDF-SHA-256 key wrapping
hmac             = "0.12"       # C9/C10 header + block HMAC
sha2             = "0.10"       # C9  SHA-256 header hash
sha1             = "0.10"       # TOTP (RFC 6238 HMAC-SHA1) — used only for 2FA codes, not at rest
subtle           = "2"          # C25 constant-time comparison
getrandom        = "0.2"        # C4/C26 OS CSPRNG
unicode-normalization = "0.1"   # C2  NFC password normalization (cross-platform key stability)
# --- Search (UC-19) ---
nucleo-matcher   = "0.3"        # C35-C38 fuzzy omni-search: offline, Unicode-correct, match indices
# --- Memory hardening ---
zeroize          = { version = "1", features = ["derive"] }   # C11
secrecy          = "0.8"        # C11 secret wrappers
# --- OS hardening FFI (the only place `unsafe` lives — vault-sys) ---
libc             = "0.2"        # C12/C25 mlock + setrlimit (unix)
# --- CLI / support ---
clap             = { version = "4", features = ["derive"] }   # C21 CLI
serde            = { version = "1", features = ["derive"] }   # C29 JSON export
serde_json       = "1"                                        # C29 strict JSON serializer
rpassword        = "7"          # C29 no-echo password prompt (no secrets on argv)
ratatui          = "0.29"       # UC-18 TUI shell (pure-Rust, alt-screen secret hygiene)
crossterm        = "0.28"       # TUI backend
# --- Desktop GUI (UC-18 P2 — pure-Rust windowed app, eframe/egui) ---
# UC-20: pin glow explicitly — smaller binary/RAM on weak hardware; no persistence (VG-S5).
eframe           = { version = "0.29", default-features = false, features = ["glow", "wayland", "x11"] }
egui             = "0.29"       # immediate-mode UI widgets
rfd              = "0.15"       # native "open file" dialog for dropping in a keys.txt
thiserror        = "2"
# --- Dev / test ---
proptest         = "1"          # property tests (e.g. parser round-trips)

# Optimize release builds; strip symbols (also reduces accidental secret-name leakage).
[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"                 # no unwinding through secret-holding frames
strip = "symbols"

# A reproducible-build-friendly profile is documented in docs/VERIFYING_RELEASES.md.
