[package]
name = "vault-cli"
description = "Vault — a zero-plaintext, local-first credential vault for the AI era. The `vault` binary."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

# Installed as `cargo install vault-cli`; the binary is named `vault` (constraint C20, C21).
[[bin]]
name = "vault"
path = "src/main.rs"

[dependencies]
vault-core = { path = "../vault-core", version = "1.0.0" }
vault-sys = { path = "../vault-sys", version = "1.0.0" }
# The YubiKey 2FA path shells out to `ykman` (std subprocess), so this is a cheap, always-on dep.
vault-hardware = { path = "../vault-hardware", version = "1.0.0" }
vault-clip = { path = "../vault-clip", version = "1.0.0" }
vault-agent = { path = "../vault-agent", version = "1.0.0" }
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
getrandom.workspace = true
rpassword.workspace = true
zeroize.workspace = true
secrecy.workspace = true
