[package]
name = "vault-core"
description = "Vault security core: XChaCha20-Poly1305 STREAM, Argon2id, age-style envelope, zeroizing memory. No custom crypto."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
chacha20poly1305.workspace = true
chacha20.workspace = true
argon2.workspace = true
hkdf.workspace = true
hmac.workspace = true
sha2.workspace = true
sha1.workspace = true
subtle.workspace = true
getrandom.workspace = true
unicode-normalization.workspace = true
nucleo-matcher.workspace = true
vault-sys = { path = "../vault-sys", version = "0.1.0-alpha.2" }
zeroize.workspace = true
secrecy.workspace = true
thiserror.workspace = true

[dev-dependencies]
proptest.workspace = true

[features]
default = []
