[package]
name = "vault-gui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
description = "Vault — a simple, fast, secure desktop app (egui shell over vault-core)."

# A thin UC-18 shell: all secret-touching logic stays in `vault-core`; this binary only renders
# metadata, orchestrates clipboard delivery (model-blind), and persists via the core's save path.
[[bin]]
name = "vault-gui"
path = "src/main.rs"

[dependencies]
vault-core = { path = "../vault-core" }
eframe = { workspace = true }   # re-exports egui; used via `eframe::egui`
rfd = { workspace = true }
zeroize = { workspace = true }
getrandom = { workspace = true }   # entry-id randomness (same audited OS CSPRNG vault-core uses)
