[package]
name = "vault-hardware"
description = "Optional hardware-backed unlock stanzas for Vault: FIDO2, TPM 2.0, macOS Secure Enclave, Windows DPAPI."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true

[dependencies]
vault-core = { path = "../vault-core", version = "1.0.0" }
sha2 = { workspace = true }
zeroize = { workspace = true }
getrandom = { workspace = true }
hmac = { workspace = true }

# Most hardware integrations are feature-gated so users without a given device compile none of its
# code. The YubiKey HMAC-SHA1 path is NOT gated: it shells out to `ykman` (like the clipboard tools),
# so it needs no extra build deps and always compiles.
[features]
default = []
fido2 = []     # libfido2 raw CTAP2 (constraints C6, C14)
tpm = []       # TPM 2.0 PCR sealing (constraint C15)
secure-enclave = []  # macOS Secure Enclave (ECIES)
dpapi = []     # Windows DPAPI
